[package]
name = "diskusage_poller"
version = "0.1.3"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true}
derive-new = "=0.5.0"
failure = "=0.1.1"
fruently = "=0.9.1"
nix = "=0.9.0"
serde = "=1.0.23"
serde_derive = "=1.0.23"
structopt = "=0.1.6"
structopt-derive = "=0.1.6"

[features]
default = []

[[bin]]
name = "dup"
path = "src/main.rs"