[package]
name = "diskusage_poller"
version = "0.1.6"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true}
derive-new = "=0.5.0"
failure = "=0.1.1"
fruently = { git = "https://github.com/guangie88/fruently.git", rev = "4db5ece" }
humantime = "=1.0.0"
nix = "=0.9.0"
serde = "=1.0.23"
serde_derive = "=1.0.23"
serde_json = "=1.0.7"
structopt = "=0.1.6"
structopt-derive = "=0.1.6"

[features]
default = []

[[bin]]
name = "dup"
path = "src/main.rs"
